feat: add configuration option to remove "Overlay" label only on poster download for Plex
